[package]
name = "hypesocket"
version = "0.1.0"
edition = "2021"


[lib]
name = "hypesocket"

[dependencies]
async-net = { version = "2", default-features = false, optional = true }
futures-lite = { version = "2.3.0", default-features = false, features = [
    "std",
], optional = true }
tokio = { version = "1.38", default-features = false, features = [
    "io-std",
    "io-util",
    "net",
    "socket2",
], optional = true }
tracing = { version = "0.1.40", default-features = false, optional = true, features = [
    "attributes",
] }

[features]
default = []
async-lite = ["dep:async-net", "dep:futures-lite"]
tokio = ["dep:tokio"]
tracing = ["dep:tracing"]

[dev-dependencies]
tokio = { version = "1.38", default-features = false, features = ["rt"] }
