[package]
name = "hypesocket"
version = "0.1.0"
edition = "2021"


[lib]
name = "hypesocket"

[dependencies]
async-net = { version = "2.0", default-features = false, optional = true }
atoi = { version = "2.0", optional = true }
futures-lite = { version = "2.3", default-features = false, features = [
    "std",
], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1.38", default-features = false, features = [
    "io-std",
    "io-util",
    "net",
    "socket2",
], optional = true }
tracing = { version = "0.1", default-features = false, optional = true, features = [
    "attributes",
] }

[features]
default = []
async-lite = ["dep:async-net", "dep:futures-lite"]
tokio = ["dep:tokio"]
tracing = ["dep:tracing"]
json_commands = ["dep:serde", "dep:serde_json", "dep:atoi"]
